--- a/src/pages/blog-template/blog-template.module.scss
+++ b/src/pages/blog-template/blog-template.module.scss
@@ -1,6 +1,5 @@
 .titleWrapper {
   @include flex-direction(row);
-  padding-left: 10rem;
 
   @include max(tablet) {
     flex-direction: column;
